# usoluz

./: .gitignore  docker-compose.yml  render.yaml  render.yml
.github/workflows/: eas-build.yml
backend/: .env.example  Dockerfile  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_prices_table.py  0002_create_alerts_and_devices.py
backend/app/: main.py
backend/app/api/v1/routes/: alerts.py  prices.py
backend/app/core/: config.py  database.py  redis.py
backend/app/models/: __init__.py  alert.py  device.py  price.py
backend/app/scheduler/: jobs.py  setup.py
backend/app/schemas/: alert.py  price.py
backend/app/services/: alert_service.py  notification.py  price_service.py  ree.py
backend/scripts/: makemigration.py  test_ree.py
mobile/: app.config.js  app.json  eas.json  package-lock.json  package.json
mobile/app/: _layout.tsx  forecast.tsx  index.tsx  settings.tsx  today.tsx
mobile/components/: PriceBadge.tsx  PriceCard.tsx  PriceChart.tsx  PriceList.tsx
mobile/constants/: colors.ts  config.ts
mobile/hooks/: useCurrentPrice.ts  usePrices.ts
mobile/i18n/: index.ts
mobile/i18n/locales/: ca.ts  en.ts  es.ts
mobile/services/: api.ts
mobile/store/: alertStore.ts  settingsStore.ts
mobile/types/: price.ts
