[project]
name = "usoluz-backend"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic-settings",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "alembic",
    "redis[hiredis]",
    "httpx",
    "apscheduler",
    "firebase-admin",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "httpx"]
